@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.199 2005/12/02 03:21:39 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.200 2005/12/03 21:45:23 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  added CC networking pre-loading to Networking screen
 
   1 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added DHCP options to CC screen
